# retinal_sim

./: .gitignore  AGENTS.md  CLAUDE.md  CODEREVIEW.md  CODEREVIEW_RESOLVED.md  LICENSE.txt  PROGRESS.md  SCRATCHPAD.md  TOUCHLOG.md  pyproject.toml  retinal_sim_architecture.md
.claude/: settings.local.json
docs/: llm_coordination.md  reporting_transparency.md
docs/archive/: PROGRESS_legacy_2026-04.md
examples/: compare_three.py  plot_nomogram.py  single_species.py
reports/: architecture_audit_2026-04-04.md  remediation_roadmap_2026-04-04.md  status_latest.html  validation_report.html  validation_report.json
retinal_sim/: __init__.py  constants.py  pipeline.py
retinal_sim/optical/: __init__.py  media.py  psf.py  pupil.py  stage.py
retinal_sim/output/: __init__.py  comparison.py  diagnostics.py  perceptual.py  reconstruction.py  run_bundle.py  voronoi.py
retinal_sim/retina/: __init__.py  mosaic.py  opsin.py  stage.py  transduction.py
retinal_sim/scene/: __init__.py  geometry.py
retinal_sim/species/: __init__.py  config.py
retinal_sim/spectral/: __init__.py  upsampler.py
retinal_sim/validation/: __init__.py  acuity.py  datasets.py  dichromat.py  ishihara.py  metrics.py  report.py  snellen.py
scripts/: render_scene.py  status_report.py
tests/: test_dichromat.py  test_distance.py  test_mosaic.py  test_optical.py  test_output.py  test_pipeline.py  test_render_scene.py  test_retina.py  test_retinal_stage.py  test_scene.py  test_snellen.py  test_species.py  test_spectral.py  test_status_report.py  test_validation_report.py
(+79 files in other folders)
